# ho-stray-field

./: LICENSE  README.md  pyproject.toml  sp_flower_numpy.py
docs/source/: conf.py  ho_stray_field.base.rst  ho_stray_field.bspline.rst  ho_stray_field.gs.rst  ho_stray_field.integrate.rst  ho_stray_field.magnetostatic.rst  ho_stray_field.tensor_grid.rst  ho_stray_field.tucker_tensor.rst  index.rst  modules.rst
examples/: TG_uniform_cube_table.txt  energy.ipynb  energy_flower.csv  energy_uniform.csv  energy_uniform_s_np.csv  energy_uniform_s_sp.csv  energy_vortex.csv  energy_votex_thin_film.csv  function_fitting.ipynb  gs_approximation.ipynb  sources.py  sp_flower_numpy.py  superpotential.ipynb
examples/results/: energy_flower.csv  energy_uniform.csv  energy_uniform_s_np.csv  energy_uniform_s_sp.csv  energy_uniform_t.csv  energy_vortex.csv  energy_vortex_thin_film.csv  mumax_uniform_state.csv
ho_stray_field/: __init__.py  base.py  bspline.py  gs.py  integrate.py  magnetostatic.py  prelude.py  sources.py  tensor_grid.py  tucker_tensor.py  utils.py
test/: __init__.py  sources.py  test_base.py  test_bspliine.py  test_bspline.py  test_functional_tucker.py  test_gs.py  test_integrate.py  test_tensor_grid.py  test_tpelm.py  test_tucker_tensor.py
test/functional/: conftest.py  sp_flower.npy  test_fit_flower_state.py  test_fitting.py  test_magnetostatic_energy.py  test_superpotential.py  utils.py
tpelm/: __init__.py  base.py  bspline.py  functional_tucker.py  gs.py  integrate.py  magnetostatic.py  tensor_grid.py  tpelm.py  tucker_tensor.py
